<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_background"
    tools:context="com.example.needit.activityes.ui.dashboard.DetailDashActivity">

    <ImageView
        android:id="@+id/cover"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="Cover"
        android:layout_gravity="center"
        android:src="@drawable/boots" />

    <TextView
        android:id="@+id/stuff_title"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="2"
        android:text="@string/title_place_holder"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/stuff_count"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="1"
        android:text="@string/description_place_holder"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/stuff_description"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="1"
        android:text="@string/address_place_holder"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

</LinearLayout>