<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0EA6D0"
    android:visibility="visible"
    tools:context=".activityes.ui.notifications.NotificationsFragment">

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="410dp"
        android:layout_height="201dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="352dp"
        android:background="#71C7DF"
        android:ems="10"
        android:gravity="center|start|top"
        android:hint="@string/Enter_a_discr"
        android:inputType="textMultiLine"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="405dp"
        android:layout_height="61dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="31dp"
        android:contentDescription="@string/RndStf"
        android:contextClickable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="412dp"
        android:layout_height="56dp"
        android:layout_marginTop="284dp"
        android:background="#71C7DF"
        android:ems="10"
        android:hint="@string/Enter_a_name"
        android:inputType="textShortMessage|textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/Submit"
        android:textColor="#0EA6D0"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        app:layout_constraintVertical_bias="0.184" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="246dp"
        android:layout_height="99dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="83dp"
        android:src="@drawable/name"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="268dp"
        android:text="@string/GiveType"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>